# kirkman-etl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
infrastructure/backend-config/: prod.tfbackend
src/kirkman_etl/core/extractors/: __init__.py  base.py
src/kirkman_etl/core/loaders/: __init__.py  base.py
src/kirkman_etl/core/models/: __init__.py  pipeline_config.py  run_context.py  run_result.py  source_config.py
src/kirkman_etl/core/transformers/: __init__.py  base.py
src/kirkman_etl/core/validators/: __init__.py  base.py
tests/core/extractors/: conftest.py  test_extractor_base.py
tests/core/loaders/: conftest.py  test_loader_base.py
tests/core/models/: test_imports.py  test_pipeline_config.py  test_run_context.py  test_run_result.py  test_source_config.py
tests/core/transformers/: conftest.py  test_transformer_base.py
tests/core/validators/: conftest.py  test_validator_base.py
